--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </p>
     </header>
     <main class="main">
-      <section class="section section_stereo">
+      <section class="section section__stereo">
         <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <article class="article">
           <h3 class="text__title title-decor">Многозадачность</h3>
@@ -85,7 +85,7 @@
           </p>
         </article>
       </section>
-      <section class="section section_mono">
+      <section class="section section__mono">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <article class="article">
           <h3 class="text__title title-decor">Многозадачность</h3>
@@ -122,7 +122,7 @@
           </p>
         </article>
       </section>
-      <section class="section section_stereo">
+      <section class="section section__stereo">
         <h2 class="section__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
