--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="color-scheme" content="dark light" />
     <link rel="icon" href="./images/favicon.ico" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
     <title>Сложно сосредоточиться</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -127,10 +128,10 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
+        <h3 class="title-decor">
+          5 простых (на самом деле не очень) советов
+        </h3>
         <article class="article">
-          <h3 class="title-decor text__title-gap">
-            5 простых (на самом деле не очень) советов
-          </h3>
           <h4 class="text__title paragraph__title">
             Представьте небо и облака
           </h4>
